--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <!-- REPLACE THIS WITH YOUR PROJECT NAME. EXAMPLE - Category tabs -->
     <title>Coding Assesment L2 boilerplate</title>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <!-- Your code goes here -->
     <div class="container">
-        <a href="https://github.com/mmdmrishabh/Coding-assessment-l2-Boilerplate-code/blob/main/Readme.md" target="_blank">Read how to work with boilerplate</a>
+      <main>
+        <header>select your choice</header>
+        <section class="category-header">
+          <button class="category-name" id="Men">
+            <img src="./assests/men.svg" alt="menimg" />
+            <span>Men</span>
+          </button>
+          <button class="category-name" id="Women">
+            <img src="./assests/women.svg" alt="menimg" />
+            <span>Women</span>
+          </button>
+          <button class="category-name" id="Kids">
+            <img src="./assests/kid.svg" alt="menimg" />
+            <span>Kids</span>
+          </button>
+        </section>
+        <section class="category-products"></section>
+      </main>
     </div>
     <!-- Happy codign 😊 -->
     <script src="./script.js"></script>
-</body>
-
+  </body>
 </html>
